--- a/Notebooks/carga y limpieza reviews.ipynb
+++ b/Notebooks/carga y limpieza reviews.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <center>**Carga y limpieza de datos**</center>\n",
+    "## <center>**business.pkl y reviews.json**</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Importacion de librerias necesarias:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,6 +23,13 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Lectura de los datasets:"
    ]
   },
   {
@@ -26,6 +48,14 @@
    "outputs": [],
    "source": [
     "df_business=pd.read_pickle(r'C:\\Users\\Fernando\\Desktop\\Proyecto-Google-Yelp-Henry-\\Datasets yelp\\business.pkl')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Empezamos por el dataset de business\n",
+    "* Visualización:"
    ]
   },
   {
@@ -426,6 +456,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Información sobre las columnas:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -499,6 +536,13 @@
    ],
    "source": [
     "df_business.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Ya que las columnas venian duplicadas, borramos la segunda mitad:"
    ]
   },
   {
@@ -829,6 +873,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Cambio de tipo de datos númericos ya que estaban como strings:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -858,6 +909,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Drop de columnas innecesarias para este proyecto, algunas muy parecidas a columnas ya dropeadas en la limpieza de \"metadata-sitios\"."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -876,6 +934,13 @@
    ],
    "source": [
     "df_business.drop(['is_open','attributes','hours'],axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Deberían haber 51 estados, pero se puede explicar debido a la carencia de reviews en algunos estados del país"
    ]
   },
   {
@@ -923,7 +988,14 @@
     }
    ],
    "source": [
-    "df_business['state'].value_counts() #deberia haber 50"
+    "df_business['state'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Dividimos las categorias por comas y nos quedamos con la primera"
    ]
   },
   {
@@ -1191,6 +1263,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Revisión de nulos:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -1222,6 +1301,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Llenamos los nulos con un string vacio:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -1240,6 +1326,13 @@
    ],
    "source": [
     "df_business.fillna('',inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Revisión de los cambios:"
    ]
   },
   {
@@ -1497,7 +1590,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reviews"
+    "Ahora continuamos con el dataset de Reviews"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Empezamos con los mismos pasos:"
    ]
   },
   {
@@ -1760,6 +1860,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Muestra estadistica básica de las columnas:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -1893,12 +2000,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Dropeamos \"review_id\" debido a que nos vamos a centrar mas en las reseñas por establecimiento mas que en buscar reseñas especificas.\n",
+    "* También dropeamos \"user_id\" debido a que no nos vamos a centrar en los usuarios sino en las solas reseñas para hacer análisis de sentimiento futuros."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_reviews.drop(['review_id','user_id'],axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Quitamos las filas anteriores a enero de 2013 para aligerar el dataset y basarnos en datos mas recientes para los futuros análisis."
    ]
   },
   {
@@ -2093,6 +2215,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Miramos la cantidad de valores en las columnas de \"cool\", \"funny\" y \"useful\", determinamos que hay muchos valores en 0 como para centrarnos en estas columnas para un análisis de sentimiento futuro. La columna \"stars\" será mas útil para esto."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -2237,6 +2366,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Revisión de los valores que podemos encontrar en la columna \"text\" de reseñas para determinar si hay reseñas muy largas. Decidimos no cortar reseñas largas."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -2261,6 +2397,13 @@
    ],
    "source": [
     "df_reviews['text'].values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Miramos las \"business_id\" unicas en el dataset de reseñas y en el de negocios para ver la diferencia."
    ]
   },
   {
@@ -2301,6 +2444,13 @@
    ],
    "source": [
     "len(df_business['business_id'].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Revisamos si hay reseñas duplicadas y dropeamos las duplicadas."
    ]
   },
   {
@@ -2363,6 +2513,13 @@
    ],
    "source": [
     "len(df_reviews['text'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Revisión de duplicados para \"name\" y \"adress\", no dropeamos los que se haya duplicado debido a que una plaza podría tener varios restaurantes con la misma dirección y en cuanto a los nombres es factible que hayan cadenas o incluso coincidencias de nombres en establecimientos completamente distintos."
    ]
   },
   {
@@ -2558,6 +2715,13 @@
    "source": [
     "reviews1=df_reviews.head(2000000)\n",
     "reviews1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Partimos el dataset en 3 debido a su tamaño y para facilitar el EDA posteriormente. Exportamos."
    ]
   },
   {
@@ -3038,14 +3202,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#df1.to_csv('reviews_parte1.csv', index=False)\n",
-    "#df2.to_csv('reviews_parte2.csv', index=False)\n",
-    "#df3.to_csv('reviews_parte3.csv', index=False)"
+    "* Exportamos el dataset de business también."
    ]
   },
   {
@@ -3054,7 +3214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df_business.to_csv('business_yelp.csv',index=False)"
+    "df_business.to_csv('business_yelp.csv',index=False)"
    ]
   }
  ],
