terminado script sql database

--- a/Notebooks/Normalizacion y filtrado.ipynb
+++ b/Notebooks/Normalizacion y filtrado.ipynb
@@ -2481,7 +2481,7 @@
    "outputs": [],
    "source": [
     "#google.to_csv('google_final.csv',index=False,encoding='UTF-8')\n",
-    "yelp.to_csv('yelp_final.csv',index=False,encoding='UTF-8')"
+    "#yelp.to_csv('yelp_final.csv',index=False,encoding='UTF-8')"
    ]
   }
  ],
